# alibabacloud-maxcompute-odbc-driver

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL_INSTALL.md  Product.wxs  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: code-signing.md  design.md  usage.md
include/maxcompute_odbc/: platform.h
include/maxcompute_odbc/common/: checksum.h  errors.h  logging.h  utils.h
include/maxcompute_odbc/config/: config.h  credentials.h
include/maxcompute_odbc/maxcompute_client/: api_client.h  client.h  models.h  proto_deserializer.h  request_signer.h  setting_parser.h  tunnel.h  typeinfo.h
include/maxcompute_odbc/odbc_api/: conversions.h  encoding.h  entry_points.h  handle_registry.h  handles.h
scripts/: build.bat  build.sh  build_installer.bat  check_format.sh  generate_license_rtf.py  install_dev_driver.bat  uninstall_driver.ps1
src/: CMakeLists.txt  version.rc
src/config/: config.cpp
src/maxcompute_client/: api_client.cpp  client.cpp  models.cpp  proto_deserializer.cpp  request_signer.cpp  setting_parser.cpp  tunnel.cpp  typeinfo.cpp
src/odbc_api/: conversions.cpp  encoding.cpp  entry_points.cpp  handles.cpp  odbc_exports.def
test/: CMakeLists.txt  test_main.cpp
test/e2e/: E2E_TEST_README.md  base_test.py  check_odbc_setup.py  config.py  e2e_maxqa_test.py  e2e_maxqa_test_with_env.py  e2e_quick_test.py  runner.py  test_charset.py  test_connection.py  test_data_types.py  test_env_vars.py  test_errors.py  test_maxqa.py  test_metadata.py  test_query.py
test/unit/: config_test.cpp  encoding_test.cpp  logging_test.cpp  models_test.cpp  setting_parser_test.cpp
